--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
 								<label for="search">
 									Comment nous avez-vous connu ?
 								</label>
-								<input class="form-control" name="search" type="email" required id="input_504" />
+								<input class="form-control" name="search" type="email" required id="input" />
 							</div>
 							<div class="form-group">
 								<label for="message">
