--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="dribbble.com"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
