--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://twitter.com/?lang=fr"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="https://twitter.com/?lang=fr"><span class="fa fa-twitter icon-md" title="Twitter"><BR>Twitter</span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
