fix/liens reseau sociaux

--- a/contact.html
+++ b/contact.html
@@ -136,23 +136,23 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://twitter.com/?lang=fr"><span class="fa fa-twitter icon-md" title="Twitter"><BR>Twitter</span></a>
+									<a class="social" href="https://twitter.com/?lang=fr"><span class="fa fa-twitter icon-md"><BR>Twitter</span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md" title="Facebook"><BR>Facebook</span></a>
+									<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"><BR>Facebook</span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md" title="Dribble"><BR>Driblle</span></a>
+									<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"><BR>Driblle</span></a>
 								</div>
 							</div>
+							
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://www.instagram.com/?hl=fr"><span
-											class="fa fa-instagram icon-md" title="Instagram"><BR>Instagram</span></a>
+									<a class="social" href="https://www.instagram.com/?hl=fr"><span class="fa fa-instagram icon-md"><BR>Instagram</span></a>
 								</div>
 							</div>
 						</div>
