fix/liens reseau sociaux

--- a/index.html
+++ b/index.html
@@ -267,25 +267,24 @@
 							<div class="col-sm-3">
 								<div class="text-center">
 									<a class="social" href="https://twitter.com/?lang=fr"><span
-											class="fa fa-twitter icon-md" title="Twitter"><BR>Twitter</span></a>
+											class="fa fa-twitter icon-md"><BR>Twitter</span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
 									<a class="social" href="https://www.facebook.com/"><span
-											class="fa fa-facebook icon-md" title="Facebook"><BR>Facebook</span></a>
+											class="fa fa-facebook icon-md" ><BR>Facebook</span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="dribbble.com"><span class="fa fa-dribbble icon-md"
-											title="Dribbble"><BR>Dribbble</span></a>
+									<a class="social" href="dribbble.com"><span class="fa fa-dribbble icon-md"><BR>Dribbble</span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
 									<a class="social" href="https://www.instagram.com/?hl=fr"><span
-											class="fa fa-instagram icon-md" title="Instagram"><BR>Instagram</span></a>
+											class="fa fa-instagram icon-md"><BR>Instagram</span></a>
 								</div>
 							</div>
 						</div>
