--- a/index.html
+++ b/index.html
@@ -130,12 +130,13 @@
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 						<p class="citation">
-							<span>"L'agence La Panthère est une excellente agence web !
-								Les web designers ont réussi à capturer l'essence de
-								notre entreprise et à l'intégrer à notre site.
-								Cela nous a aidé à doubler nos ventes en ligne à Lyon."</span> <br>
-							Maxime Guibard, PDG de À vos fourchettes
-						</p>
+							"La Panthere agence est une excellente agence web ! Les web
+							designers ont réussi à capturer l'essence de notre entreprise
+							et à l'intégrer à notre site. Cela nous a aider à doubler nos
+							ventes en ligne à Lyon".
+						  </p>
+						  <p class="citation-author">
+							Maxime Guibard, PDG de À vos fourchettes</p>
 
 					</div>
 				</div>
@@ -266,25 +267,25 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://twitter.com/?lang=fr"><span
+									<a class="social" href="https://twitter.com/?lang=fr" aria-label="twitter"><span
 											class="fa fa-twitter icon-md" title="Twitter"><BR>Twitter</span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://www.facebook.com/"><span
+									<a class="social" href="https://www.facebook.com/" aria-label="facebook"><span
 											class="fa fa-facebook icon-md" title="Facebook"><BR>Facebook</span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="dribbble.com"><span class="fa fa-dribbble icon-md"
+									<a class="social" href="dribbble.com" aria-label="dribble"><span class="fa fa-dribbble icon-md"
 											title="Dribbble"><BR>Dribbble</span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://www.instagram.com/?hl=fr"><span
+									<a class="social" href="https://www.instagram.com/?hl=fr" aria-label="instagram"><span
 											class="fa fa-instagram icon-md" title="Instagram"><BR>Instagram</span></a>
 								</div>
 							</div>
