--- a/contact.html
+++ b/contact.html
@@ -17,15 +17,7 @@
 
 	<title>La Panthère</title>
 
-	<!-- Analytics -->
-	<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-0QN0PF0WG7"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
-		gtag('config', 'G-0QN0PF0WG7');
-	</script> -->
-	<!-- Analytics END -->
+	
 
 </head>
 
@@ -34,7 +26,7 @@
 	<div class="page-container">
 
 		<!-- bloc-0 -->
-		<div class="bloc bgc-white l-bloc " id="bloc-0">
+		<header class="bloc bgc-white l-bloc " id="bloc-0">
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header">
@@ -51,20 +43,15 @@
 							<li>
 								<a href="index.html">Accueil</a>
 							</li>
-							<li>
-							</li>
-							<li>
-								<a href="contact.html">Contact</a>
-							</li>
 						</ul>
 					</div>
 				</nav>
 			</div>
-		</div>
+		</header>
 		<!-- bloc-0 END -->
-
+		<main>
 		<!-- bloc-6 -->
-		<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
+		<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
 			id="bloc-6">
 			<div class="container bloc-lg">
 				<div class="row">
@@ -79,11 +66,11 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-6 END -->
 
 		<!-- bloc-7 -->
-		<div class="bloc bgc-white l-bloc" id="bloc-7">
+		<section class="bloc bgc-white l-bloc" id="bloc-7">
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-6">
@@ -126,14 +113,14 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-7 END -->
 
 		<!-- ScrollToTop Button -->
 		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
 				class="fa fa-chevron-up"></span></a>
 		<!-- ScrollToTop Button END-->
-
+		</main>	
 
 		<!-- Footer - bloc-8 -->
 		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
