--- a/index.html
+++ b/index.html
@@ -265,25 +265,24 @@
 								<div class="text-center">
 
 									<a class="social" href="https://twitter.com/?lang=fr" aria-label="reseau_twitter"><span
-											class="fa fa-twitter icon-md" title="Twitter"><BR>Twitter</span></a></div>
+											class="fa fa-twitter icon-md"><BR>Twitter</span></a></div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
 
 									<a class="social" href="https://www.facebook.com/" aria-label="reseau_facebook"><span
-											class="fa fa-facebook icon-md" title="Facebook"><BR>Facebook</span></a></div>
+											class="fa fa-facebook icon-md"><BR>Facebook</span></a></div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
 
-									<a class="social" href="dribbble.com" aria-label="reseau_dribble"><span class="fa fa-dribbble icon-md"
-											title="Dribbble"><BR>Dribbble</span></a></div>
+									<a class="social" href="dribbble.com" aria-label="reseau_dribble"><span class="fa fa-dribbble icon-md"><BR>Dribbble</span></a></div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
 
 									<a class="social" href="https://www.instagram.com/?hl=fr" aria-label="reseau_instagram"><span
-											class="fa fa-instagram icon-md" title="Instagram"><BR>Instagram</span></a></div>
+											class="fa fa-instagram icon-md"><BR>Instagram</span></a></div>
 							</div>
 						</div>
 					</div>
